build/log/idf_py_stdout_output_30356
[1/13] Building C object esp-idf/ft813/CMakeFiles/__idf_ft813.dir/EVE_API.c.obj
[2/13] Building C object esp-idf/ft813/CMakeFiles/__idf_ft813.dir/EVE_HAL.c.obj
[3/13] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D C:\Users\mikel\OneDrive\Desktop\Prelude\Code\hello_world\build\bootloader\esp-idf\esptool_py && C:\Users\mikel\.espressif\python_env\idf5.3_py3.11_env\Scripts\python.exe C:/Users/mikel/esp-adf/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 C:/Users/mikel/OneDrive/Desktop/Prelude/Code/hello_world/build/bootloader/bootloader.bin"
Bootloader binary size 0x6570 bytes. 0x1a90 bytes (21%) free.
[4/11] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
In file included from C:/Users/mikel/OneDrive/Desktop/Prelude/Code/hello_world/main/main.c:9:
C:/Users/mikel/OneDrive/Desktop/Prelude/Code/hello_world/main/imu.h: In function 'imu_init':
C:/Users/mikel/OneDrive/Desktop/Prelude/Code/hello_world/main/imu.h:135:21: warning: initialization of 'unsigned char' from 'void *' makes integer from pointer without a cast [-Wint-conversion]
  135 |         .Address  = NULL,
      |                     ^~~~
C:/Users/mikel/OneDrive/Desktop/Prelude/Code/hello_world/main/imu.h:135:21: note: (near initialization for '(anonymous).Address')
C:/Users/mikel/OneDrive/Desktop/Prelude/Code/hello_world/main/imu.h:136:21: warning: initialization of 'int32_t (*)(uint16_t,  uint16_t,  uint8_t *, uint16_t)' {aka 'long int (*)(short unsigned int,  short unsigned int,  unsigned char *, short unsigned int)'} from incompatible pointer type 'int32_t (*)(void *, uint8_t,  uint8_t *, uint16_t)' {aka 'long int (*)(void *, unsigned char,  unsigned char *, short unsigned int)'} [-Wincompatible-pointer-types]
  136 |         .WriteReg = lsm6dso_platform_write,
      |                     ^~~~~~~~~~~~~~~~~~~~~~
C:/Users/mikel/OneDrive/Desktop/Prelude/Code/hello_world/main/imu.h:136:21: note: (near initialization for '(anonymous).WriteReg')
C:/Users/mikel/OneDrive/Desktop/Prelude/Code/hello_world/main/imu.h:137:21: warning: initialization of 'int32_t (*)(uint16_t,  uint16_t,  uint8_t *, uint16_t)' {aka 'long int (*)(short unsigned int,  short unsigned int,  unsigned char *, short unsigned int)'} from incompatible pointer type 'int32_t (*)(void *, uint8_t,  uint8_t *, uint16_t)' {aka 'long int (*)(void *, unsigned char,  unsigned char *, short unsigned int)'} [-Wincompatible-pointer-types]
  137 |         .ReadReg  = lsm6dso_platform_read,
      |                     ^~~~~~~~~~~~~~~~~~~~~
C:/Users/mikel/OneDrive/Desktop/Prelude/Code/hello_world/main/imu.h:137:21: note: (near initialization for '(anonymous).ReadReg')
[5/11] Building C object esp-idf/ft813/CMakeFiles/__idf_ft813.dir/MCU.c.obj
FAILED: esp-idf/ft813/CMakeFiles/__idf_ft813.dir/MCU.c.obj 
ccache C:\Users\mikel\.espressif\tools\xtensa-esp-elf\esp-13.2.0_20240530\xtensa-esp-elf\bin\xtensa-esp32s3-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.3.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Users/mikel/OneDrive/Desktop/Prelude/Code/hello_world/include -IC:/Users/mikel/OneDrive/Desktop/Prelude/Code/hello_world/build/config -IC:/Users/mikel/OneDrive/Desktop/Prelude/Code/hello_world/components/ft813 -IC:/Users/mikel/esp-adf/esp-idf/components/newlib/platform_include -IC:/Users/mikel/esp-adf/esp-idf/components/freertos/config/include -IC:/Users/mikel/esp-adf/esp-idf/components/freertos/config/include/freertos -IC:/Users/mikel/esp-adf/esp-idf/components/freertos/config/xtensa/include -IC:/Users/mikel/esp-adf/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/Users/mikel/esp-adf/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Users/mikel/esp-adf/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/Users/mikel/esp-adf/esp-idf/components/freertos/esp_additions/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_hw_support/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_hw_support/include/soc -IC:/Users/mikel/esp-adf/esp-idf/components/esp_hw_support/include/soc/esp32s3 -IC:/Users/mikel/esp-adf/esp-idf/components/esp_hw_support/dma/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_hw_support/ldo/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_hw_support/port/esp32s3/. -IC:/Users/mikel/esp-adf/esp-idf/components/esp_hw_support/port/esp32s3/include -IC:/Users/mikel/esp-adf/esp-idf/components/heap/include -IC:/Users/mikel/esp-adf/esp-idf/components/log/include -IC:/Users/mikel/esp-adf/esp-idf/components/soc/include -IC:/Users/mikel/esp-adf/esp-idf/components/soc/esp32s3 -IC:/Users/mikel/esp-adf/esp-idf/components/soc/esp32s3/include -IC:/Users/mikel/esp-adf/esp-idf/components/hal/platform_port/include -IC:/Users/mikel/esp-adf/esp-idf/components/hal/esp32s3/include -IC:/Users/mikel/esp-adf/esp-idf/components/hal/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_rom/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_rom/include/esp32s3 -IC:/Users/mikel/esp-adf/esp-idf/components/esp_rom/esp32s3 -IC:/Users/mikel/esp-adf/esp-idf/components/esp_common/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_system/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_system/port/soc -IC:/Users/mikel/esp-adf/esp-idf/components/esp_system/port/include/private -IC:/Users/mikel/esp-adf/esp-idf/components/xtensa/esp32s3/include -IC:/Users/mikel/esp-adf/esp-idf/components/xtensa/include -IC:/Users/mikel/esp-adf/esp-idf/components/xtensa/deprecated_include -IC:/Users/mikel/esp-adf/esp-idf/components/lwip/include -IC:/Users/mikel/esp-adf/esp-idf/components/lwip/include/apps -IC:/Users/mikel/esp-adf/esp-idf/components/lwip/include/apps/sntp -IC:/Users/mikel/esp-adf/esp-idf/components/lwip/lwip/src/include -IC:/Users/mikel/esp-adf/esp-idf/components/lwip/port/include -IC:/Users/mikel/esp-adf/esp-idf/components/lwip/port/freertos/include -IC:/Users/mikel/esp-adf/esp-idf/components/lwip/port/esp32xx/include -IC:/Users/mikel/esp-adf/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/Users/mikel/esp-adf/esp-idf/components/lwip/port/esp32xx/include/sys -IC:/Users/mikel/esp-adf/esp-idf/components/driver/deprecated -IC:/Users/mikel/esp-adf/esp-idf/components/driver/i2c/include -IC:/Users/mikel/esp-adf/esp-idf/components/driver/touch_sensor/include -IC:/Users/mikel/esp-adf/esp-idf/components/driver/twai/include -IC:/Users/mikel/esp-adf/esp-idf/components/driver/touch_sensor/esp32s3/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_pm/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_ringbuf/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_driver_gpio/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_driver_pcnt/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_driver_gptimer/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_driver_spi/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_driver_mcpwm/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_driver_ana_cmpr/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_driver_i2s/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_driver_sdmmc/include -IC:/Users/mikel/esp-adf/esp-idf/components/sdmmc/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_driver_sdspi/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_driver_sdio/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_driver_dac/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_driver_rmt/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_driver_tsens/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_driver_sdm/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_driver_i2c/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_driver_uart/include -IC:/Users/mikel/esp-adf/esp-idf/components/vfs/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_driver_ledc/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_driver_parlio/include -IC:/Users/mikel/esp-adf/esp-idf/components/esp_driver_usb_serial_jtag/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=C:/Users/mikel/OneDrive/Desktop/Prelude/Code/hello_world=. -fmacro-prefix-map=C:/Users/mikel/esp-adf/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/ft813/CMakeFiles/__idf_ft813.dir/MCU.c.obj -MF esp-idf\ft813\CMakeFiles\__idf_ft813.dir\MCU.c.obj.d -o esp-idf/ft813/CMakeFiles/__idf_ft813.dir/MCU.c.obj -c C:/Users/mikel/OneDrive/Desktop/Prelude/Code/hello_world/components/ft813/MCU.c
C:/Users/mikel/OneDrive/Desktop/Prelude/Code/hello_world/components/ft813/MCU.c: In function 'MCU_Init':
C:/Users/mikel/OneDrive/Desktop/Prelude/Code/hello_world/components/ft813/MCU.c:20:5: error: implicit declaration of function 'ESP_LOGE'; did you mean 'ESP_OK'? [-Werror=implicit-function-declaration]
   20 |     ESP_LOGE("FT813", "FAILED TO INITIALIZE FT813_SPI");
      |     ^~~~~~~~
      |     ESP_OK
cc1.exe: some warnings being treated as errors
ninja: build stopped: subcommand failed.
